--- a/views/index.pug
+++ b/views/index.pug
@@ -1,18 +1,18 @@
 extends layout
 
 block content
-  navbar.navheader 
+  navbar.navheader
     h1.logo &#x2604 Comet Jobs
-      a(href='/') 
-    ul.main-nav 
-      li.join 
+      a(href='/')
+    ul.main-nav
+      li.join
         a.button Join our community
-      li.postajob 
+      li.postajob
         a(href='https://toomai.typeform.com/to/VnpRAv' target='_blank').button Post a Job
-  section.content 
+  section.content
 
- 
-  div.header 
+
+  div.header
     div.textbox
       h1 Be part of the sports revolution
       h2 Find tech and startup jobs in the sports industry
@@ -20,55 +20,57 @@ block content
       .headerimage
   navbar.nav
     .card
-      div.cover 
+      div.cover
        button All Jobs
     .card
-      div.cover 
+      div.cover
        button Virtual Reality
-   
+
     .card
-      div.cover 
+      div.cover
        button Data Science
     .card
-      div.cover 
+      div.cover
        button Web Development
     .card
-      div.cover 
-       button Design 
+      div.cover
+       button Design
     .card
-      div.cover 
+      div.cover
        button Business Development
     .card
-      div.cover 
+      div.cover
        button Sales
     //- .card
-    //-   div.cover 
+    //-   div.cover
     //-    button Remote Jobs
 
   section.jobpostvr
-    
+
     .content
       input.field(placeholder="Your Email")
       button.subscribe Subscribe to Newsletter
-   
+
     h1 Recent jobs
-   
+
     each post in data
       table.joblist
           tr
             td
               p.position= post['position']
             td
-              div.tags  
+              div.tags
                ul#tagslist
                 p= post['tags']
             td
               p.location= post['location']
-            td 
-              a(href='http://localhost:3000/' + post['slug']).button.info Get more Info 
-           
-           
-      
+            td
+              p.company= post['company']
+            td
+              a(href='http://localhost:3000/' + post['slug']).button.info Get more Info
 
-   
+
+
+
+
 
