--- a/views/jobInfo.pug
+++ b/views/jobInfo.pug
@@ -2,25 +2,52 @@ extends layout
 
 block content
   navbar.navheader 
-    h1.logo
-      a(href='/') SportTech
+    .logotext
+      a.logo(href='/') <span>Sportek</span> 
+      h1.logo_job jobs
     ul.main-nav 
-      li.postajob 
-        a(href='https://toomai.typeform.com/to/VnpRAv' target='_blank').button Post a Job
+      li.twitter
+        a.twitter-follow-button(href='https://twitter.com/sportekjobs', data-show-count='false') Follow @teacherjobs_io
+      
+      li.join 
+        a.button(href='/sportsjobs-remote-jobs') Remote Jobs 
+      li.join 
+        a.button(href='/sportsjobs-internships') Internships
+      //- li.join 
+      //-   a.button(href='https://t.me/joinchat/A9hsRBDuvCUuCe_U0othnw') Community
+      li.join 
+        a.button(href='/sports-companies') Companies
+      li.join 
+        a.button(href='/sportsjobs-collections') Collections
+      
+      li.postajob
+        a.button(href='/hire') Post a Job
+        //- a(href='https://toomai.typeform.com/to/VnpRAv' target='_blank').button Post a Job
+        //- a.typeform-share.button(href='https://toomai.typeform.com/to/VnpRAv', data-mode='drawer_right', target='_blank') Post a Job
+  
   section.jobinformation 
     each post in data
-    
-        .jobdetails
-            h1=post['position']
-
-            p.location=post['company']
-           
-        p.location=post['location']
-        p.description=post['description'] 
+      .generalinfo
+        h1=post['company']
+        p is looking for a 
+        h1=post['position']
+        a.button#sharebuttonsfb(href='https://www.facebook.com/sharer/sharer.php?u=https://sportekjobs.com/' + post['slug'], target='_blank') Share this job
+        a.button#sharebuttonstw(href='https://twitter.com/share?url=https://sportekjobs.com/' + post['slug'], data-text='New job opening', data-hashtags='sports', data-show-count='false', target='_blank') Tweet this job
+        a.button#sharebuttonsli(href='https://www.linkedin.com/shareArticle?mini=true&url=https://sportekjobs.com/&title=' + post['slug'], target='_blank') Post on Linkedin
+      .advertiser
+        #revue-embed
+                form#revue-form(action='https://www.getrevue.co/profile/tobias-hikari/add_subscriber', method='post', name='revue-form', target='_blank')
+                  .revue-form-group
+                    label(for='member_email') 
+                    input#member_email.field(placeholder='Your email address...', type='email', name='member[email]')
+                  
+                  .revue-form-actions
+                    input#subscribe.button(type='submit', value='Subscribe to Newsletter', name='member[subscribe]')
+      .jobdetails   
+        p.location=post['location'] 
+      .jobdescription
+        p.description!=post['description'] 
         p=post['email']
         
-        a(href=post['link']).button.apply Apply for this job
-
+        a(href=post['link'], target='_blank').button.apply Apply for this job
         
-      
-
