--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,7 +24,7 @@ html(lang='en')
     link(rel='shortcut icon' href='/images/favicon.ico' type='image/x-icon')
     script(src='https://cdn.jsdelivr.net/npm/typeit@5.10.6/dist/typeit.min.js')
     script(async='' src='https://www.googletagmanager.com/gtag/js?id=UA-24727257-9')
-    script(src='https://cdn.ckeditor.com/4.11.2/standard-all/ckeditor.js')
+    script(src='https://cdn.ckeditor.com/ckeditor5/12.0.0/classic/ckeditor.js')
     
     script.
       window.dataLayer = window.dataLayer || [];
