--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,7 +34,7 @@ body {
   text-decoration: none;
   margin-right: 15px;
   font-size: 20px;
-  background-image: linear-gradient(180deg,transparent 70%,#fff5c4 0);
+  background-image: linear-gradient(180deg,transparent 70%,#fdf2b7 0);
   padding: 2px;
 }
 
@@ -111,7 +111,7 @@ body {
 .logo{
   display: flex;
   flex-direction: row;
-  background-image: url('')
+  
 }
 
 .textbox>h2 {
@@ -621,24 +621,17 @@ tr {
 }
 
 .logo {
-  margin: 0;
+  /* margin: 0;
   font-size: 1.65em;
   display: flex;
   flex-direction: row;
   padding-right: 6px;
   color: palevioletred;
-  text-decoration: none;
+  text-decoration: none; */
+  background-image: url('../images/logosk.png')
 }
 
-.logo_job {
-  margin: 0;
-  font-size: 1.65em;
-  display: flex;
-  flex-direction: row;
-  padding-right: 6px;
 
-  color: white;
-}
 
 .main-nav {
   margin-top: 15px;
