--- a/views/mixins/_navbar.pug
+++ b/views/mixins/_navbar.pug
@@ -1,10 +1,11 @@
 mixin _navbar
     navbar.navheader 
-        .logo
-            //- a.logo(href='/') <span>Sportek</span> 
-            //- h1.logo_job jobs
-        a(href='/') 
+        //- .logo
+        //-     a.logo(href='/') 
+        //-     //- h1.logo_job jobs
+        //- a(href='/') 
         ul.main-nav 
+            
             //- li.twitter
             //-     a.twitter-follow-button(href='https://twitter.com/sportekjobs', data-show-count='false') Follow @teacherjobs_io  
             //- li.join 
@@ -19,6 +20,7 @@ mixin _navbar
             //-     a.button(href='/sportsjobs-collections') Collections
             //- li.join 
             //-     a.button(href='https://sportekblog.webflow.io/') Blog
-            
+            li
+                
             li.postajob 
                 a.button(href='/hire') Post a Job
