--- a/views/mixins/_navbar.pug
+++ b/views/mixins/_navbar.pug
@@ -2,6 +2,8 @@ mixin _navbar
     navbar.navheader 
         //- .logo
         //-     a.logo(href='/') 
+        a.logo(href='/')
+            img(src='../images/logosk.png')
         //-     //- h1.logo_job jobs
         //- a(href='/') 
         ul.main-nav 
