--- a/views/companyInfo.pug
+++ b/views/companyInfo.pug
@@ -1,24 +1,14 @@
 extends layout
+include mixins/_navbar.pug
+include mixins/_secondmenu.pug
+
 block content
-  navbar.navheader 
-    .logotext
-      a.logo(href='/') <span>Sportek</span> 
-      h1.logo_job jobs
-    ul.main-nav 
-      li.twitter
-        a.twitter-follow-button(href='https://twitter.com/sportekjobs', data-show-count='false') Follow @teacherjobs_io
-      li.join 
-        a.button(href='/sportsjobs-remote-jobs') Remote Jobs 
-      li.join 
-        a.button(href='/sportsjobs-internships') Internships
-      //- li.join 
-      //-   a.button(href='https://t.me/joinchat/A9hsRBDuvCUuCe_U0othnw') Community
-      li.join 
-        a.button(href='/sports-companies') Companies
-      li.join 
-        a.button(href='/sportsjobs-collections') Collections
-      li.postajob 
-        a.button(href='/hire') Post a Job
+  div.header 
+    div.textbox
+      +_navbar 
+      div.title
+        h1 <strong>Be part of the sports revolution.</strong>
+        h2 Find tech and startup jobs in sports.
   section.companyinfo
     each post in data || []
       h1= post['copmany'] 
